BinaryContentRepository 구현